# Iosh__FibonacciView

./: .gitignore  Cargo.toml  Clippy.toml  README.md  Rustfmt.toml
crates/fibo_calc/: Cargo.toml
crates/fibo_calc/benches/: bench_fibo.rs  memory_profiling.rs
crates/fibo_calc/examples/: simple_usage.rs
crates/fibo_calc/src/: builder.rs  calculator.rs  error.rs  lib.rs
crates/fibo_calc/src/implementation/: lineal.rs  matmul.rs  mod.rs
crates/fibo_calc/src/task/: calculate.rs  calculate_fibo_task.rs  mod.rs
crates/fibo_view/: Cargo.toml  build.rs
crates/fibo_view/benches/: memory_profiling.rs
crates/fibo_view/src/: lib.rs  main.rs  terminal_app.rs
crates/fibo_view/src/app/: event.rs  mod.rs  state.rs
crates/fibo_view/src/app/state/: calculation_params.rs  filter.rs  input.rs  mod.rs  output.rs
crates/fibo_view/src/domain/: expr_calc.rs  fibo_calc.rs  mod.rs
crates/fibo_view/src/ui/: input_panel.rs  list_styles.rs  mod.rs  output_panel.rs
crates/fibo_view/src/ui/input_panel/: list_styles.rs  mod.rs  result_renderer.rs
crates/fibo_view/src/ui/output_panel/: list_styles.rs  mod.rs  result_renderer.rs
