[package]
name = "fibo_calc"
version = "0.1.0"
edition = "2024"

[dependencies]
num-bigint = "0.4.6"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }

[[example]]
name = "simple_usage"
path = "examples/simple_usage.rs"

[[example]]
name = "advanced_usage"
path = "examples/advanced_usage.rs"
