[package]
name = "fibo_calc"
version = "0.1.0"
edition = "2024"

[dependencies]
num-bigint = "0.4.6"
rayon      = "1.10.0"
tokio = { version = "1.45.1", features = ["full"] }

[dev-dependencies]
criterion = "0.6"
dhat      = "0.3.3"
test-case = "2.0.0-rc1"

[[example]]
name = "simple_usage"
path = "examples/simple_usage.rs"

[[bench]]
# time profile
name = "bench_fibo"
path = "benches/bench_fibo.rs"
harness = false

[[bench]]
# memory profile
name = "memory_profiling_calc"
path = "benches/memory_profiling.rs"
harness = false
