[package]
name = "fibo_view"
version = "0.1.0"
edition = "2024"

[dependencies]
# Calculation
fibo_calc  = { path = "../fibo_calc" }
num-bigint = "0.4.6"
kalkulator = "0.2.2"

# Terminal
ratatui   = "0.29.0"
crossterm = "0.29.0"

# Async
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros"] }

[build-dependencies]
winres = "0.1.12"
